--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "sequelize": "^6.29.3"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "name": "interview-prep-app",
   "description": "",
